# computer-vision-inference-tutorials

./: README.md
0-setup/: CMakeLists.txt  Opt_MatrixMultiplication.cl  README.md  VAinstaller.py  gemm  install_CVSDK.sh  setupvars.sh  silent.cfg
0-setup/SRB5/etc/OpenCL/vendors/: intel.icd
0-setup/SRB5/etc/ld.so.conf.d/: libintelopencl.conf
0-setup/SRB5/etc/profile.d/: libintelopencl.sh
0-setup/SRB5/opt/intel/opencl/: LICENSE  NOTICES  OpenCL.pc  clbltfne9.rtl  clbltfne9_img_cbk.rtl  clbltfnh8.rtl  clbltfnh8_img_cbk.rtl  clbltfnl9.rtl  clbltfnl9_img_cbk.rtl  clbltfnshared.rtl  kernel-4.4-xcode.patch  kernel-4.7.patch  libOpenCL.so.1  libtbb.so.2  libtbbmalloc.so.2
0-setup/SRB5/opt/intel/opencl/include/CL/: cl.h  cl.hpp  cl_ext.h  cl_platform.h  cl_vebox_intel.h
1-object-detection-sdd/: README.md
1-object-detection-ssd/: Makefile  README.md  SSD_GoogleNet_v2_fp32.xml  common.hpp  get_test_video.sh  installSSDCaffe.py  main.cpp  runMO.py  ssd_caffe.patch
2-run-model-optimizer/: README.md  SSD_GoogleNetV2_Deploy.prototxt  getModel.sh  main.cpp
2-run-model-optimizer/videos/: cars_768x768.avi  cat_720x720.avi
